# HaskQuery

./: HaskQuery.cabal  HaskQuery.hs  LICENSE  Main.hs
HaskQuery/: AutoIndex.hs  IntIndex.hs  OrdIndex.hs
