
name:                HaskQuery
version:             0.1.0.0
-- synopsis:            
-- description:         
license:             BSD3
license-file:        LICENSE
author:              steven
maintainer:          stevechy@gmail.com
-- copyright:           
-- category:            
build-type:          Simple
-- extra-source-files:  
cabal-version:       >=1.10

executable haskellQueryTest
  main-is: Main.hs
  -- other-modules:       
  -- other-extensions:    
  build-depends:       base >=4.5 && <4.7, 
                       containers >=0.5 && <0.6,
                       transformers
  -- hs-source-dirs:      
  default-language:    Haskell2010
